<resources>
    <string name="app_name">GamePal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUpFromLogin">"Don't have an account? <font color='#7B7890'>Sign up here"</font></string>
    <string name="logInFromSignup">"Already have an account? <font color='#7B7890'>Log in here"</font></string>
    <string name="pwShowTooltip">Hold to show password</string>
</resources>