<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context=".Login"
    tools:ignore="ContentDescription"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="374dp"
        android:layout_height="273dp"
        android:layout_marginTop="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="364dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:background="#AB988989"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/prompt_email"
            android:textSize="10sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="364dp"
        android:layout_height="51dp"
        android:background="#AB988989"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="10sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignUpLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:text="@string/signUpFromLogin"
        android:textColor="@color/text"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_showPW"
        android:tooltipText="@string/pwShowTooltip"
        android:layout_width="37dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintTop_toTopOf="@+id/inputPassword"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/action_sign_in_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>